--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -7,13 +7,14 @@
 	android:layout_height="match_parent"
 	tools:context=".Test">
 
-	<TextView
-		android:layout_width="wrap_content"
+	<xyz.slashg.unpasito.PasitoBar
+		android:layout_width="128dp"
+		android:id="@+id/pasito"
 		android:layout_height="wrap_content"
-		android:text="Hello World!"
 		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.5"
+		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
